# docsail

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: gfm-preview-test.md
docs/adr/: 0001-use-rust-and-ratatui.md  0002-support-gfm-and-azure-wiki.md  0003-avoid-node-and-browser-dependencies.md  0004-evaluate-merman.md  0005-use-ignore-for-gitignore.md  0006-use-pulldown-cmark-and-document-model.md
docs/product/: roadmap.md  scope.md  v0.1.0-issue-plan.md  vision.md
src/: app.rs  diagram.rs  event.rs  main.rs  markdown.rs  terminal.rs  ui.rs  workspace.rs
