[package]
name = "docsail"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal-native Markdown workspace viewer"

[[bin]]
name = "docsail"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ignore = "0.4.30"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
