[package]
name = "docsail"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A terminal-native Markdown workspace viewer"

[[bin]]
name = "docsail"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ignore = "0.4.30"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
unicode-width = "0.2.2"
