[package]
name = "docsail"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A terminal-native Markdown workspace viewer"

[[bin]]
name = "docsail"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
image = { version = "0.25.6", default-features = false }
ignore = "0.4.30"
merman = { version = "0.7.0", default-features = false, features = ["raster"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
unicode-width = "0.2.2"
